plugins {
    id "nebula.lint" version "16.16.0"
}

allprojects {
    apply plugin: 'java'
    sourceCompatibility = 17
    targetCompatibility = 17
    // Run manually with "./gradlew autoLintGradle"
    // Unused dependency warning cannot always be trusted, always verify ("this dependency is unused and can be removed")
    gradleLint.rules = ['all-dependency']
    gradleLint.alwaysRun = false


    configurations.all {
        // commons-logging and jcl-over-slf4j pulled in by different deps
        // resulting in duplicate org.apache.commons.logging.impl.* classes
        exclude group: "commons-logging", module: "commons-logging"

        // Not needed since Java 6
        exclude group: "stax", module: "stax-api"
    }

    apply plugin: 'codenarc'
    codenarc {
        configFile = new File("${project.projectDir}/../codenarc.config")
        ignoreFailures = true
        dependencies {
            codenarc('org.codenarc:CodeNarc:3.3.0')
            codenarc('org.codehaus.groovy:groovy-all:3.0.7')
        }
    }
}